- Make sure that state is set to active when rendering progress bar in ViewDelegate (232727)
- Suspend KTorrent -> Suspend Torrents to avoid confusion (233421)
- Workaround memory leak in krosspython by not passing QObject pointers as arguments to callMethod (223885, 226924)
- Make move on completion a per torrent feature
- Make compiling plasma applet dependant on Qt version 

Changes in 4.0beta2:
- Use proper KDE function to format date in syndication plugin
- Make sure HTMLPart uses proper charset when rendering page
- Add copy URL item to popupmenu in search plugin view
- Pause becomes suspend
- Revamp torrent creation code
- Avoid unnecessary memcpy when generating hash
- Add UDP tracker scraping
- Improve handling of incomplete handshakes (218875)
- When switching back from fullscreen video make sure the tab shown is the video tab
- Replace KMultiTabBar by QToolBar, because it handles not enough space better (214524)
- Make tab moving possible in TorrentActivity and SearchActivity (215053)
- Show arrows in qm widget to indicate if a torrent is a seed or a download
- Fix crash caused by not checking for 0 pointer (220442)
- Add search line in QM widget which highlights and scrolls to found items (220428)
- Moving multiple items in QM widget is now possible (220428)
- Prevent trackers from sending back to much data (220684)
- Fix typo in in log message of QM (223888)
- Added patch witch adds an additional column to a View showing the date and time a torrent was added
- Fix compilation not working on solaris due to missing NAME_MAX define (222598)
- Fix check for existing files for single file torrents in FileSelectDlg (225900)
- Add pathOnDisk dbus call on a torrent to retrieve the output path
- Fix crash in GroupView (226134)
- Cleanup notifier before closing socket in webinterface plugin, fixes a crash (225956)
- Make sure that weekdays deselects weekend, and weekend deselects weekdays in scheduler plugin (225952)